homework14/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - valser.dynv6.net
    secretName: quickstart-example-tls
  rules:
  - host: valser.dynv6.net
    http:
      paths:
      - path: /mernstack
        pathType: Prefix
        backend:
          service:
            name: mern-stack-node
            port:
              number: 80
